# pubat

./: Cargo.toml  README.md
src/: app.rs  cmd.rs  initialize_viewport.rs  lib.rs  main.rs  tmp.txt  txt.txt
src/app/: heart.rs  init.rs  main.rs  mod.rs  state.rs
src/key/: core.rs
src/prelude/: normal.rs
src/prelude/cterm/: all.rs
src/render/: highlight.rs  mod.rs  render_line.rs
src/render/buffer/: lines.rs
src/state/: mod.rs
src/state/buffer/: init.rs  mod.rs
src/wrap/: gutter.rs  mod.rs  util.rs
