[package]
name = "pubat"
version = "0.1.0"
edition = "2024"
description = "The Pude's choice for better file viewing than bat"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pudep/pubat"
keywords = ["cli", "tui", "bat", "cat", "pude"]
categories = ["command-line-utilities"]

default-run = "pubat"

[dependencies]
ratatui = "0.30.2"
syntect = "5.2"
clap = {version = "4.6.1", features=["derive"]}
crossterm = "0.29.0"
ropey = "1.6.1"
textwrap = "0.16.2"
shellexpand = "3.1.2"
